--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fullstack-vue-express-mongo",
   "version": "1.0.0",
-  "description": "fullstack vue express mongo",
+  "description": "new try",
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
@@ -19,11 +19,11 @@
   "homepage": "https://github.com/wulfnb/Fullstack-Vue-Express-Mongo#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongodb": "^3.1.13"
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.6"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.4"
   }
 }
